--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <meta name="twitter:site" content="@edencontractingny">
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://edencontractingny.com/">
+    <link rel="canonical" href="https://sidewalk-services-nyc.vercel.app/">
     
     <!-- Favicon and Icons -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
