--- a/nyc.html
+++ b/nyc.html
@@ -10,6 +10,8 @@
     <meta name="keywords" content="NYC sidewalk repair, New York City sidewalk specialists, DOT violation removal NYC, concrete repair Manhattan Brooklyn Queens Bronx">
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://sidewalk-services-nyc.vercel.app/nyc.html">
+
     
     <!-- Schema Markup for NYC Service Page -->
     <script type="application/ld+json">
