--- a/bronx.html
+++ b/bronx.html
@@ -9,6 +9,8 @@
      <meta name="author" content="Eden Contracting NY">
     <meta name="robots" content="index, follow"> 
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://sidewalk-services-nyc.vercel.app/bronx.html">
+
     
     <!-- Schema Markup for Bronx Service Page -->
     <script type="application/ld+json">
