--- a/queens.html
+++ b/queens.html
@@ -9,7 +9,8 @@
      <meta name="author" content="Eden Contracting NY">
     <meta name="robots" content="index, follow">  
     <link rel="stylesheet" href="styles.css">
-    
+        <link rel="canonical" href="https://sidewalk-services-nyc.vercel.app/queens.html">
+
     <!-- Schema Markup for Queens Service Page -->
     <script type="application/ld+json">
     {
