--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://sidewalk-services-nyc.vercel.app/">
+    <meta name="google-site-verification" content="ymQgx46ty9_O4wrXWPXXAZ8iAV51X43WaBwWmhYTyeE" />
     
     <!-- Favicon and Icons -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
