--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <h1>NYC Sidewalk Repair & Concrete Solutions</h1>
                 <h2>Your Trusted Partner</h2>
                 <p>NYC sidewalk repair and concrete solutions. Your trusted partner for reliable and efficient services in New York City.</p>
-                <a href="https://edencontractingny.com/" class="cta-button">Sidewalk Repair Queens</a>
+                <a href="https://edencontractingny.com/queens/" class="cta-button">Sidewalk Repair Queens</a>
             </div>
         </div>
     </section>
